// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate code: code 1`] = `
"// This file is generated by a tool. All changes will be overwritten.
import gql from 'graphql-tag'

// Scalar Types
type String = string
type Int = number
type Float = number
type Boolean = boolean
type ID = string
type CustomScalar = string

// Input Types
interface InputType {
  recursive: Nullable<InputType>
  nested: Nullable<NestedInputType>
  scalar: Nullable<Boolean>
  list: Nullable<ReadonlyArray<String>>
}
interface NestedInputType {
  scalar: Nullable<Int>
}

// Operations
const testScalars: __operation<
  'query',
  {},
  {
    scalarString: Nullable<String>
    scalarInt: Nullable<Int>
    scalarFloat: Nullable<Float>
    scalarBoolean: Nullable<Boolean>
    scalarID: Nullable<ID>
    scalarCustom: Nullable<CustomScalar>
    renamedString: Nullable<String>
  }
> = gql\`
  query testScalars {
    scalarString
    scalarInt
    scalarFloat
    scalarBoolean
    scalarID
    scalarCustom
    renamedString: scalarString
  }
\`
const testNullability: __operation<
  'query',
  {},
  {
    nullableBoolean: Nullable<Boolean>
    nonNullableBoolean: Boolean
  }
> = gql\`
  query testNullability {
    nullableBoolean
    nonNullableBoolean
  }
\`
const testNesting: __operation<
  'query',
  {},
  {
    nestedObject: Nullable<{
      recursive: Nullable<{
        recursive: Nullable<{
          scalar: Nullable<Boolean>
        }>
      }>
      nested: Nullable<{
        scalar: Nullable<Int>
      }>
      scalar: Nullable<Boolean>
      list: Nullable<ReadonlyArray<String>>
    }>
  }
> = gql\`
  query testNesting {
    nestedObject {
      recursive {
        recursive {
          scalar
        }
      }
      nested {
        scalar
      }
      scalar
      list
    }
  }
\`
const testUnion: __operation<
  'query',
  {},
  {
    union: Nullable<
      | {
          __typename: 'Tomato'
          id: Nullable<ID>
          color: Nullable<String>
        }
      | {
          __typename: 'Potato'
          id: Nullable<ID>
          origin: Nullable<String>
        }
    >
  }
> = gql\`
  query testUnion {
    union {
      ... on Tomato {
        id
        color
      }
      ... on Potato {
        id
        origin
      }
    }
  }
\`
const testMethods: __operation<
  'query',
  {
    reqParam: String
    optParam: Float
    input: Nullable<InputType>
    list2: ReadonlyArray<CustomScalar>
  },
  {
    method: Nullable<CustomScalar>
    renamedMethod: Nullable<ReadonlyArray<Nullable<CustomScalar>>>
  }
> = gql\`
  query testMethods(
    $reqParam: String!
    $optParam: Float!
    $input: InputType
    $list2: [CustomScalar!]!
  ) {
    method(requiredParam: $reqParam, optionalParam: $optParam, input: $input)
    renamedMethod: method2(list2: $list2)
  }
\`
const testScalarsMutation: __operation<
  'mutation',
  {},
  {
    scalarString: Nullable<String>
    scalarInt: Nullable<Int>
    scalarFloat: Nullable<Float>
    scalarBoolean: Nullable<Boolean>
    scalarID: Nullable<ID>
    scalarCustom: Nullable<CustomScalar>
    renamedString: Nullable<String>
  }
> = gql\`
  mutation testScalarsMutation {
    scalarString
    scalarInt
    scalarFloat
    scalarBoolean
    scalarID
    scalarCustom
    renamedString: scalarString
  }
\`
const testNullabilityMutation: __operation<
  'mutation',
  {},
  {
    nullableBoolean: Nullable<Boolean>
    nonNullableBoolean: Boolean
  }
> = gql\`
  mutation testNullabilityMutation {
    nullableBoolean
    nonNullableBoolean
  }
\`
const testNestingMutation: __operation<
  'mutation',
  {},
  {
    nestedObject: Nullable<{
      recursive: Nullable<{
        recursive: Nullable<{
          scalar: Nullable<Boolean>
        }>
      }>
      nested: Nullable<{
        scalar: Nullable<Int>
      }>
      scalar: Nullable<Boolean>
      list: Nullable<ReadonlyArray<String>>
    }>
  }
> = gql\`
  mutation testNestingMutation {
    nestedObject {
      recursive {
        recursive {
          scalar
        }
      }
      nested {
        scalar
      }
      scalar
      list
    }
  }
\`
const testMethodsMutation: __operation<
  'mutation',
  {
    reqParam: String
    optParam: Float
    input: Nullable<InputType>
    list2: ReadonlyArray<CustomScalar>
  },
  {
    method: Nullable<CustomScalar>
    renamedMethod: Nullable<ReadonlyArray<Nullable<CustomScalar>>>
  }
> = gql\`
  mutation testMethodsMutation(
    $reqParam: String!
    $optParam: Float!
    $input: InputType
    $list2: [CustomScalar!]!
  ) {
    method(requiredParam: $reqParam, optionalParam: $optParam, input: $input)
    renamedMethod: method2(list2: $list2)
  }
\`

// Helper types
type __operation<Kind, Data, Variables> = any
type Nullable<T> = T | null
"
`;

exports[`load document: document 1`] = `
Object {
  "document": Object {
    "definitions": Array [
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 135,
          "start": 0,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 17,
            "start": 6,
          },
          "value": "testScalars",
        },
        "operation": "query",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 135,
            "start": 18,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 34,
                "start": 22,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 34,
                  "start": 22,
                },
                "value": "scalarString",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 46,
                "start": 37,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 46,
                  "start": 37,
                },
                "value": "scalarInt",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 60,
                "start": 49,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 60,
                  "start": 49,
                },
                "value": "scalarFloat",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 76,
                "start": 63,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 76,
                  "start": 63,
                },
                "value": "scalarBoolean",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 87,
                "start": 79,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 87,
                  "start": 79,
                },
                "value": "scalarID",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 102,
                "start": 90,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 102,
                  "start": 90,
                },
                "value": "scalarCustom",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 119,
                  "start": 106,
                },
                "value": "renamedString",
              },
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 133,
                "start": 106,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 133,
                  "start": 121,
                },
                "value": "scalarString",
              },
              "selectionSet": undefined,
            },
          ],
        },
        "variableDefinitions": Array [],
      },
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 201,
          "start": 137,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 158,
            "start": 143,
          },
          "value": "testNullability",
        },
        "operation": "query",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 201,
            "start": 159,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 178,
                "start": 163,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 178,
                  "start": 163,
                },
                "value": "nullableBoolean",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 199,
                "start": 181,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 199,
                  "start": 181,
                },
                "value": "nonNullableBoolean",
              },
              "selectionSet": undefined,
            },
          ],
        },
        "variableDefinitions": Array [],
      },
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 360,
          "start": 203,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 220,
            "start": 209,
          },
          "value": "testNesting",
        },
        "operation": "query",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 360,
            "start": 221,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 358,
                "start": 225,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 237,
                  "start": 225,
                },
                "value": "nestedObject",
              },
              "selectionSet": Object {
                "kind": "SelectionSet",
                "loc": Object {
                  "end": 358,
                  "start": 238,
                },
                "selections": Array [
                  Object {
                    "alias": undefined,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 302,
                      "start": 244,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 253,
                        "start": 244,
                      },
                      "value": "recursive",
                    },
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "loc": Object {
                        "end": 302,
                        "start": 254,
                      },
                      "selections": Array [
                        Object {
                          "alias": undefined,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 296,
                            "start": 262,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 271,
                              "start": 262,
                            },
                            "value": "recursive",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "loc": Object {
                              "end": 296,
                              "start": 272,
                            },
                            "selections": Array [
                              Object {
                                "alias": undefined,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "loc": Object {
                                  "end": 288,
                                  "start": 282,
                                },
                                "name": Object {
                                  "kind": "Name",
                                  "loc": Object {
                                    "end": 288,
                                    "start": 282,
                                  },
                                  "value": "scalar",
                                },
                                "selectionSet": undefined,
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                  Object {
                    "alias": undefined,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 334,
                      "start": 307,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 313,
                        "start": 307,
                      },
                      "value": "nested",
                    },
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "loc": Object {
                        "end": 334,
                        "start": 314,
                      },
                      "selections": Array [
                        Object {
                          "alias": undefined,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 328,
                            "start": 322,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 328,
                              "start": 322,
                            },
                            "value": "scalar",
                          },
                          "selectionSet": undefined,
                        },
                      ],
                    },
                  },
                  Object {
                    "alias": undefined,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 345,
                      "start": 339,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 345,
                        "start": 339,
                      },
                      "value": "scalar",
                    },
                    "selectionSet": undefined,
                  },
                  Object {
                    "alias": undefined,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 354,
                      "start": 350,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 354,
                        "start": 350,
                      },
                      "value": "list",
                    },
                    "selectionSet": undefined,
                  },
                ],
              },
            },
          ],
        },
        "variableDefinitions": Array [],
      },
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 490,
          "start": 362,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 377,
            "start": 368,
          },
          "value": "testUnion",
        },
        "operation": "query",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 490,
            "start": 378,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 488,
                "start": 382,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 387,
                  "start": 382,
                },
                "value": "union",
              },
              "selectionSet": Object {
                "kind": "SelectionSet",
                "loc": Object {
                  "end": 488,
                  "start": 388,
                },
                "selections": Array [
                  Object {
                    "directives": Array [],
                    "kind": "InlineFragment",
                    "loc": Object {
                      "end": 436,
                      "start": 394,
                    },
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "loc": Object {
                        "end": 436,
                        "start": 408,
                      },
                      "selections": Array [
                        Object {
                          "alias": undefined,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 418,
                            "start": 416,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 418,
                              "start": 416,
                            },
                            "value": "id",
                          },
                          "selectionSet": undefined,
                        },
                        Object {
                          "alias": undefined,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 430,
                            "start": 425,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 430,
                              "start": 425,
                            },
                            "value": "color",
                          },
                          "selectionSet": undefined,
                        },
                      ],
                    },
                    "typeCondition": Object {
                      "kind": "NamedType",
                      "loc": Object {
                        "end": 407,
                        "start": 401,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 407,
                          "start": 401,
                        },
                        "value": "Tomato",
                      },
                    },
                  },
                  Object {
                    "directives": Array [],
                    "kind": "InlineFragment",
                    "loc": Object {
                      "end": 484,
                      "start": 441,
                    },
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "loc": Object {
                        "end": 484,
                        "start": 455,
                      },
                      "selections": Array [
                        Object {
                          "alias": undefined,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 465,
                            "start": 463,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 465,
                              "start": 463,
                            },
                            "value": "id",
                          },
                          "selectionSet": undefined,
                        },
                        Object {
                          "alias": undefined,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 478,
                            "start": 472,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 478,
                              "start": 472,
                            },
                            "value": "origin",
                          },
                          "selectionSet": undefined,
                        },
                      ],
                    },
                    "typeCondition": Object {
                      "kind": "NamedType",
                      "loc": Object {
                        "end": 454,
                        "start": 448,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 454,
                          "start": 448,
                        },
                        "value": "Potato",
                      },
                    },
                  },
                ],
              },
            },
          ],
        },
        "variableDefinitions": Array [],
      },
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 720,
          "start": 492,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 509,
            "start": 498,
          },
          "value": "testMethods",
        },
        "operation": "query",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 720,
            "start": 601,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [
                Object {
                  "kind": "Argument",
                  "loc": Object {
                    "end": 636,
                    "start": 612,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 625,
                      "start": 612,
                    },
                    "value": "requiredParam",
                  },
                  "value": Object {
                    "kind": "Variable",
                    "loc": Object {
                      "end": 636,
                      "start": 627,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 636,
                        "start": 628,
                      },
                      "value": "reqParam",
                    },
                  },
                },
                Object {
                  "kind": "Argument",
                  "loc": Object {
                    "end": 662,
                    "start": 638,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 651,
                      "start": 638,
                    },
                    "value": "optionalParam",
                  },
                  "value": Object {
                    "kind": "Variable",
                    "loc": Object {
                      "end": 662,
                      "start": 653,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 662,
                        "start": 654,
                      },
                      "value": "optParam",
                    },
                  },
                },
                Object {
                  "kind": "Argument",
                  "loc": Object {
                    "end": 677,
                    "start": 664,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 669,
                      "start": 664,
                    },
                    "value": "input",
                  },
                  "value": Object {
                    "kind": "Variable",
                    "loc": Object {
                      "end": 677,
                      "start": 671,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 677,
                        "start": 672,
                      },
                      "value": "input",
                    },
                  },
                },
              ],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 678,
                "start": 605,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 611,
                  "start": 605,
                },
                "value": "method",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 694,
                  "start": 681,
                },
                "value": "renamedMethod",
              },
              "arguments": Array [
                Object {
                  "kind": "Argument",
                  "loc": Object {
                    "end": 717,
                    "start": 704,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 709,
                      "start": 704,
                    },
                    "value": "list2",
                  },
                  "value": Object {
                    "kind": "Variable",
                    "loc": Object {
                      "end": 717,
                      "start": 711,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 717,
                        "start": 712,
                      },
                      "value": "list2",
                    },
                  },
                },
              ],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 718,
                "start": 681,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 703,
                  "start": 696,
                },
                "value": "method2",
              },
              "selectionSet": undefined,
            },
          ],
        },
        "variableDefinitions": Array [
          Object {
            "defaultValue": undefined,
            "directives": Array [],
            "kind": "VariableDefinition",
            "loc": Object {
              "end": 531,
              "start": 513,
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 531,
                "start": 524,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 530,
                  "start": 524,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 530,
                    "start": 524,
                  },
                  "value": "String",
                },
              },
            },
            "variable": Object {
              "kind": "Variable",
              "loc": Object {
                "end": 522,
                "start": 513,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 522,
                  "start": 514,
                },
                "value": "reqParam",
              },
            },
          },
          Object {
            "defaultValue": undefined,
            "directives": Array [],
            "kind": "VariableDefinition",
            "loc": Object {
              "end": 551,
              "start": 534,
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 551,
                "start": 545,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 550,
                  "start": 545,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 550,
                    "start": 545,
                  },
                  "value": "Float",
                },
              },
            },
            "variable": Object {
              "kind": "Variable",
              "loc": Object {
                "end": 543,
                "start": 534,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 543,
                  "start": 535,
                },
                "value": "optParam",
              },
            },
          },
          Object {
            "defaultValue": undefined,
            "directives": Array [],
            "kind": "VariableDefinition",
            "loc": Object {
              "end": 571,
              "start": 554,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 571,
                "start": 562,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 571,
                  "start": 562,
                },
                "value": "InputType",
              },
            },
            "variable": Object {
              "kind": "Variable",
              "loc": Object {
                "end": 560,
                "start": 554,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 560,
                  "start": 555,
                },
                "value": "input",
              },
            },
          },
          Object {
            "defaultValue": undefined,
            "directives": Array [],
            "kind": "VariableDefinition",
            "loc": Object {
              "end": 598,
              "start": 574,
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 598,
                "start": 582,
              },
              "type": Object {
                "kind": "ListType",
                "loc": Object {
                  "end": 597,
                  "start": 582,
                },
                "type": Object {
                  "kind": "NonNullType",
                  "loc": Object {
                    "end": 596,
                    "start": 583,
                  },
                  "type": Object {
                    "kind": "NamedType",
                    "loc": Object {
                      "end": 595,
                      "start": 583,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 595,
                        "start": 583,
                      },
                      "value": "CustomScalar",
                    },
                  },
                },
              },
            },
            "variable": Object {
              "kind": "Variable",
              "loc": Object {
                "end": 580,
                "start": 574,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 580,
                  "start": 575,
                },
                "value": "list2",
              },
            },
          },
        ],
      },
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 868,
          "start": 722,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 750,
            "start": 731,
          },
          "value": "testScalarsMutation",
        },
        "operation": "mutation",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 868,
            "start": 751,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 767,
                "start": 755,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 767,
                  "start": 755,
                },
                "value": "scalarString",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 779,
                "start": 770,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 779,
                  "start": 770,
                },
                "value": "scalarInt",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 793,
                "start": 782,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 793,
                  "start": 782,
                },
                "value": "scalarFloat",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 809,
                "start": 796,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 809,
                  "start": 796,
                },
                "value": "scalarBoolean",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 820,
                "start": 812,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 820,
                  "start": 812,
                },
                "value": "scalarID",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 835,
                "start": 823,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 835,
                  "start": 823,
                },
                "value": "scalarCustom",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 852,
                  "start": 839,
                },
                "value": "renamedString",
              },
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 866,
                "start": 839,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 866,
                  "start": 854,
                },
                "value": "scalarString",
              },
              "selectionSet": undefined,
            },
          ],
        },
        "variableDefinitions": Array [],
      },
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 945,
          "start": 870,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 902,
            "start": 879,
          },
          "value": "testNullabilityMutation",
        },
        "operation": "mutation",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 945,
            "start": 903,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 922,
                "start": 907,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 922,
                  "start": 907,
                },
                "value": "nullableBoolean",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 943,
                "start": 925,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 943,
                  "start": 925,
                },
                "value": "nonNullableBoolean",
              },
              "selectionSet": undefined,
            },
          ],
        },
        "variableDefinitions": Array [],
      },
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 1115,
          "start": 947,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 975,
            "start": 956,
          },
          "value": "testNestingMutation",
        },
        "operation": "mutation",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 1115,
            "start": 976,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 1113,
                "start": 980,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 992,
                  "start": 980,
                },
                "value": "nestedObject",
              },
              "selectionSet": Object {
                "kind": "SelectionSet",
                "loc": Object {
                  "end": 1113,
                  "start": 993,
                },
                "selections": Array [
                  Object {
                    "alias": undefined,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 1057,
                      "start": 999,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1008,
                        "start": 999,
                      },
                      "value": "recursive",
                    },
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "loc": Object {
                        "end": 1057,
                        "start": 1009,
                      },
                      "selections": Array [
                        Object {
                          "alias": undefined,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 1051,
                            "start": 1017,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 1026,
                              "start": 1017,
                            },
                            "value": "recursive",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "loc": Object {
                              "end": 1051,
                              "start": 1027,
                            },
                            "selections": Array [
                              Object {
                                "alias": undefined,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "loc": Object {
                                  "end": 1043,
                                  "start": 1037,
                                },
                                "name": Object {
                                  "kind": "Name",
                                  "loc": Object {
                                    "end": 1043,
                                    "start": 1037,
                                  },
                                  "value": "scalar",
                                },
                                "selectionSet": undefined,
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                  Object {
                    "alias": undefined,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 1089,
                      "start": 1062,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1068,
                        "start": 1062,
                      },
                      "value": "nested",
                    },
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "loc": Object {
                        "end": 1089,
                        "start": 1069,
                      },
                      "selections": Array [
                        Object {
                          "alias": undefined,
                          "arguments": Array [],
                          "directives": Array [],
                          "kind": "Field",
                          "loc": Object {
                            "end": 1083,
                            "start": 1077,
                          },
                          "name": Object {
                            "kind": "Name",
                            "loc": Object {
                              "end": 1083,
                              "start": 1077,
                            },
                            "value": "scalar",
                          },
                          "selectionSet": undefined,
                        },
                      ],
                    },
                  },
                  Object {
                    "alias": undefined,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 1100,
                      "start": 1094,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1100,
                        "start": 1094,
                      },
                      "value": "scalar",
                    },
                    "selectionSet": undefined,
                  },
                  Object {
                    "alias": undefined,
                    "arguments": Array [],
                    "directives": Array [],
                    "kind": "Field",
                    "loc": Object {
                      "end": 1109,
                      "start": 1105,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1109,
                        "start": 1105,
                      },
                      "value": "list",
                    },
                    "selectionSet": undefined,
                  },
                ],
              },
            },
          ],
        },
        "variableDefinitions": Array [],
      },
      Object {
        "directives": Array [],
        "kind": "OperationDefinition",
        "loc": Object {
          "end": 1356,
          "start": 1117,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1145,
            "start": 1126,
          },
          "value": "testMethodsMutation",
        },
        "operation": "mutation",
        "selectionSet": Object {
          "kind": "SelectionSet",
          "loc": Object {
            "end": 1356,
            "start": 1237,
          },
          "selections": Array [
            Object {
              "alias": undefined,
              "arguments": Array [
                Object {
                  "kind": "Argument",
                  "loc": Object {
                    "end": 1272,
                    "start": 1248,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 1261,
                      "start": 1248,
                    },
                    "value": "requiredParam",
                  },
                  "value": Object {
                    "kind": "Variable",
                    "loc": Object {
                      "end": 1272,
                      "start": 1263,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1272,
                        "start": 1264,
                      },
                      "value": "reqParam",
                    },
                  },
                },
                Object {
                  "kind": "Argument",
                  "loc": Object {
                    "end": 1298,
                    "start": 1274,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 1287,
                      "start": 1274,
                    },
                    "value": "optionalParam",
                  },
                  "value": Object {
                    "kind": "Variable",
                    "loc": Object {
                      "end": 1298,
                      "start": 1289,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1298,
                        "start": 1290,
                      },
                      "value": "optParam",
                    },
                  },
                },
                Object {
                  "kind": "Argument",
                  "loc": Object {
                    "end": 1313,
                    "start": 1300,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 1305,
                      "start": 1300,
                    },
                    "value": "input",
                  },
                  "value": Object {
                    "kind": "Variable",
                    "loc": Object {
                      "end": 1313,
                      "start": 1307,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1313,
                        "start": 1308,
                      },
                      "value": "input",
                    },
                  },
                },
              ],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 1314,
                "start": 1241,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1247,
                  "start": 1241,
                },
                "value": "method",
              },
              "selectionSet": undefined,
            },
            Object {
              "alias": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1330,
                  "start": 1317,
                },
                "value": "renamedMethod",
              },
              "arguments": Array [
                Object {
                  "kind": "Argument",
                  "loc": Object {
                    "end": 1353,
                    "start": 1340,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 1345,
                      "start": 1340,
                    },
                    "value": "list2",
                  },
                  "value": Object {
                    "kind": "Variable",
                    "loc": Object {
                      "end": 1353,
                      "start": 1347,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1353,
                        "start": 1348,
                      },
                      "value": "list2",
                    },
                  },
                },
              ],
              "directives": Array [],
              "kind": "Field",
              "loc": Object {
                "end": 1354,
                "start": 1317,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1339,
                  "start": 1332,
                },
                "value": "method2",
              },
              "selectionSet": undefined,
            },
          ],
        },
        "variableDefinitions": Array [
          Object {
            "defaultValue": undefined,
            "directives": Array [],
            "kind": "VariableDefinition",
            "loc": Object {
              "end": 1167,
              "start": 1149,
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 1167,
                "start": 1160,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 1166,
                  "start": 1160,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 1166,
                    "start": 1160,
                  },
                  "value": "String",
                },
              },
            },
            "variable": Object {
              "kind": "Variable",
              "loc": Object {
                "end": 1158,
                "start": 1149,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1158,
                  "start": 1150,
                },
                "value": "reqParam",
              },
            },
          },
          Object {
            "defaultValue": undefined,
            "directives": Array [],
            "kind": "VariableDefinition",
            "loc": Object {
              "end": 1187,
              "start": 1170,
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 1187,
                "start": 1181,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 1186,
                  "start": 1181,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 1186,
                    "start": 1181,
                  },
                  "value": "Float",
                },
              },
            },
            "variable": Object {
              "kind": "Variable",
              "loc": Object {
                "end": 1179,
                "start": 1170,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1179,
                  "start": 1171,
                },
                "value": "optParam",
              },
            },
          },
          Object {
            "defaultValue": undefined,
            "directives": Array [],
            "kind": "VariableDefinition",
            "loc": Object {
              "end": 1207,
              "start": 1190,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1207,
                "start": 1198,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1207,
                  "start": 1198,
                },
                "value": "InputType",
              },
            },
            "variable": Object {
              "kind": "Variable",
              "loc": Object {
                "end": 1196,
                "start": 1190,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1196,
                  "start": 1191,
                },
                "value": "input",
              },
            },
          },
          Object {
            "defaultValue": undefined,
            "directives": Array [],
            "kind": "VariableDefinition",
            "loc": Object {
              "end": 1234,
              "start": 1210,
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 1234,
                "start": 1218,
              },
              "type": Object {
                "kind": "ListType",
                "loc": Object {
                  "end": 1233,
                  "start": 1218,
                },
                "type": Object {
                  "kind": "NonNullType",
                  "loc": Object {
                    "end": 1232,
                    "start": 1219,
                  },
                  "type": Object {
                    "kind": "NamedType",
                    "loc": Object {
                      "end": 1231,
                      "start": 1219,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 1231,
                        "start": 1219,
                      },
                      "value": "CustomScalar",
                    },
                  },
                },
              },
            },
            "variable": Object {
              "kind": "Variable",
              "loc": Object {
                "end": 1216,
                "start": 1210,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1216,
                  "start": 1211,
                },
                "value": "list2",
              },
            },
          },
        ],
      },
    ],
    "kind": "Document",
    "loc": Object {
      "end": 1497,
      "start": 0,
    },
  },
  "sourceCode": "query testScalars {
  scalarString
  scalarInt
  scalarFloat
  scalarBoolean
  scalarID
  scalarCustom

  renamedString: scalarString
}

query testNullability {
  nullableBoolean
  nonNullableBoolean
}

query testNesting {
  nestedObject {
    recursive {
      recursive {
        scalar
      }
    }
    nested {
      scalar
    }
    scalar
    list
  }
}

query testUnion {
  union {
    ... on Tomato {
      id
      color
    }
    ... on Potato {
      id
      origin
    }
  }
}

query testMethods(
  $reqParam: String!
  $optParam: Float!
  $input: InputType
  $list2: [CustomScalar!]!
) {
  method(requiredParam: $reqParam, optionalParam: $optParam, input: $input)
  renamedMethod: method2(list2: $list2)
}

mutation testScalarsMutation {
  scalarString
  scalarInt
  scalarFloat
  scalarBoolean
  scalarID
  scalarCustom

  renamedString: scalarString
}

mutation testNullabilityMutation {
  nullableBoolean
  nonNullableBoolean
}

mutation testNestingMutation {
  nestedObject {
    recursive {
      recursive {
        scalar
      }
    }
    nested {
      scalar
    }
    scalar
    list
  }
}

mutation testMethodsMutation(
  $reqParam: String!
  $optParam: Float!
  $input: InputType
  $list2: [CustomScalar!]!
) {
  method(requiredParam: $reqParam, optionalParam: $optParam, input: $input)
  renamedMethod: method2(list2: $list2)
}

# fragment ObjectTypeFields on ObjectType {
#   scalar
# }

# query testFragments {
#   nestedObject {
#     ...ObjectTypeFields
#   }
# }
",
}
`;

exports[`load schema: schema 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@skip",
    "@include",
    "@deprecated",
  ],
  "_implementations": Object {
    "UnionType": Array [],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": Object {},
  "_queryType": "Query",
  "_subscriptionType": null,
  "_typeMap": Object {
    "Boolean": "Boolean",
    "CustomScalar": "CustomScalar",
    "Float": "Float",
    "ID": "ID",
    "InputType": "InputType",
    "Int": "Int",
    "Mutation": "Mutation",
    "NestedInputType": "NestedInputType",
    "NestedObjectType": "NestedObjectType",
    "ObjectType": "ObjectType",
    "Potato": "Potato",
    "Query": "Query",
    "String": "String",
    "Tomato": "Tomato",
    "UnionType": "UnionType",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;

exports[`transform document: documentIR 1`] = `
Object {
  "operations": Array [
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "scalarString",
            "schemaName": "scalarString",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarInt",
            "schemaName": "scalarInt",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarFloat",
            "schemaName": "scalarFloat",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarBoolean",
            "schemaName": "scalarBoolean",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarID",
            "schemaName": "scalarID",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarCustom",
            "schemaName": "scalarCustom",
            "selectionSet": undefined,
          },
          Object {
            "name": "renamedString",
            "schemaName": "scalarString",
            "selectionSet": undefined,
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "query",
      "name": "testScalars",
      "sourceCodeRange": Array [
        0,
        135,
      ],
      "variables": Object {},
    },
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "nullableBoolean",
            "schemaName": "nullableBoolean",
            "selectionSet": undefined,
          },
          Object {
            "name": "nonNullableBoolean",
            "schemaName": "nonNullableBoolean",
            "selectionSet": undefined,
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "query",
      "name": "testNullability",
      "sourceCodeRange": Array [
        137,
        201,
      ],
      "variables": Object {},
    },
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "nestedObject",
            "schemaName": "nestedObject",
            "selectionSet": Object {
              "fields": Array [
                Object {
                  "name": "recursive",
                  "schemaName": "recursive",
                  "selectionSet": Object {
                    "fields": Array [
                      Object {
                        "name": "recursive",
                        "schemaName": "recursive",
                        "selectionSet": Object {
                          "fields": Array [
                            Object {
                              "name": "scalar",
                              "schemaName": "scalar",
                              "selectionSet": undefined,
                            },
                          ],
                          "fragments": Array [],
                          "unions": Object {},
                        },
                      },
                    ],
                    "fragments": Array [],
                    "unions": Object {},
                  },
                },
                Object {
                  "name": "nested",
                  "schemaName": "nested",
                  "selectionSet": Object {
                    "fields": Array [
                      Object {
                        "name": "scalar",
                        "schemaName": "scalar",
                        "selectionSet": undefined,
                      },
                    ],
                    "fragments": Array [],
                    "unions": Object {},
                  },
                },
                Object {
                  "name": "scalar",
                  "schemaName": "scalar",
                  "selectionSet": undefined,
                },
                Object {
                  "name": "list",
                  "schemaName": "list",
                  "selectionSet": undefined,
                },
              ],
              "fragments": Array [],
              "unions": Object {},
            },
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "query",
      "name": "testNesting",
      "sourceCodeRange": Array [
        203,
        360,
      ],
      "variables": Object {},
    },
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "union",
            "schemaName": "union",
            "selectionSet": Object {
              "fields": Array [],
              "fragments": Array [],
              "unions": Object {
                "Potato": Object {
                  "fields": Array [
                    Object {
                      "name": "id",
                      "schemaName": "id",
                      "selectionSet": undefined,
                    },
                    Object {
                      "name": "origin",
                      "schemaName": "origin",
                      "selectionSet": undefined,
                    },
                  ],
                  "fragments": Array [],
                  "unions": Object {},
                },
                "Tomato": Object {
                  "fields": Array [
                    Object {
                      "name": "id",
                      "schemaName": "id",
                      "selectionSet": undefined,
                    },
                    Object {
                      "name": "color",
                      "schemaName": "color",
                      "selectionSet": undefined,
                    },
                  ],
                  "fragments": Array [],
                  "unions": Object {},
                },
              },
            },
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "query",
      "name": "testUnion",
      "sourceCodeRange": Array [
        362,
        490,
      ],
      "variables": Object {},
    },
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "method",
            "schemaName": "method",
            "selectionSet": undefined,
          },
          Object {
            "name": "renamedMethod",
            "schemaName": "method2",
            "selectionSet": undefined,
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "query",
      "name": "testMethods",
      "sourceCodeRange": Array [
        492,
        720,
      ],
      "variables": Object {
        "input": Object {
          "kind": "namedType",
          "typename": "InputType",
        },
        "list2": Object {
          "kind": "nonNull",
          "wrappedType": Object {
            "kind": "list",
            "wrappedType": Object {
              "kind": "nonNull",
              "wrappedType": Object {
                "kind": "namedType",
                "typename": "CustomScalar",
              },
            },
          },
        },
        "optParam": Object {
          "kind": "nonNull",
          "wrappedType": Object {
            "kind": "namedType",
            "typename": "Float",
          },
        },
        "reqParam": Object {
          "kind": "nonNull",
          "wrappedType": Object {
            "kind": "namedType",
            "typename": "String",
          },
        },
      },
    },
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "scalarString",
            "schemaName": "scalarString",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarInt",
            "schemaName": "scalarInt",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarFloat",
            "schemaName": "scalarFloat",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarBoolean",
            "schemaName": "scalarBoolean",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarID",
            "schemaName": "scalarID",
            "selectionSet": undefined,
          },
          Object {
            "name": "scalarCustom",
            "schemaName": "scalarCustom",
            "selectionSet": undefined,
          },
          Object {
            "name": "renamedString",
            "schemaName": "scalarString",
            "selectionSet": undefined,
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "mutation",
      "name": "testScalarsMutation",
      "sourceCodeRange": Array [
        722,
        868,
      ],
      "variables": Object {},
    },
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "nullableBoolean",
            "schemaName": "nullableBoolean",
            "selectionSet": undefined,
          },
          Object {
            "name": "nonNullableBoolean",
            "schemaName": "nonNullableBoolean",
            "selectionSet": undefined,
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "mutation",
      "name": "testNullabilityMutation",
      "sourceCodeRange": Array [
        870,
        945,
      ],
      "variables": Object {},
    },
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "nestedObject",
            "schemaName": "nestedObject",
            "selectionSet": Object {
              "fields": Array [
                Object {
                  "name": "recursive",
                  "schemaName": "recursive",
                  "selectionSet": Object {
                    "fields": Array [
                      Object {
                        "name": "recursive",
                        "schemaName": "recursive",
                        "selectionSet": Object {
                          "fields": Array [
                            Object {
                              "name": "scalar",
                              "schemaName": "scalar",
                              "selectionSet": undefined,
                            },
                          ],
                          "fragments": Array [],
                          "unions": Object {},
                        },
                      },
                    ],
                    "fragments": Array [],
                    "unions": Object {},
                  },
                },
                Object {
                  "name": "nested",
                  "schemaName": "nested",
                  "selectionSet": Object {
                    "fields": Array [
                      Object {
                        "name": "scalar",
                        "schemaName": "scalar",
                        "selectionSet": undefined,
                      },
                    ],
                    "fragments": Array [],
                    "unions": Object {},
                  },
                },
                Object {
                  "name": "scalar",
                  "schemaName": "scalar",
                  "selectionSet": undefined,
                },
                Object {
                  "name": "list",
                  "schemaName": "list",
                  "selectionSet": undefined,
                },
              ],
              "fragments": Array [],
              "unions": Object {},
            },
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "mutation",
      "name": "testNestingMutation",
      "sourceCodeRange": Array [
        947,
        1115,
      ],
      "variables": Object {},
    },
    Object {
      "data": Object {
        "fields": Array [
          Object {
            "name": "method",
            "schemaName": "method",
            "selectionSet": undefined,
          },
          Object {
            "name": "renamedMethod",
            "schemaName": "method2",
            "selectionSet": undefined,
          },
        ],
        "fragments": Array [],
        "unions": Object {},
      },
      "kind": "mutation",
      "name": "testMethodsMutation",
      "sourceCodeRange": Array [
        1117,
        1356,
      ],
      "variables": Object {
        "input": Object {
          "kind": "namedType",
          "typename": "InputType",
        },
        "list2": Object {
          "kind": "nonNull",
          "wrappedType": Object {
            "kind": "list",
            "wrappedType": Object {
              "kind": "nonNull",
              "wrappedType": Object {
                "kind": "namedType",
                "typename": "CustomScalar",
              },
            },
          },
        },
        "optParam": Object {
          "kind": "nonNull",
          "wrappedType": Object {
            "kind": "namedType",
            "typename": "Float",
          },
        },
        "reqParam": Object {
          "kind": "nonNull",
          "wrappedType": Object {
            "kind": "namedType",
            "typename": "String",
          },
        },
      },
    },
  ],
}
`;

exports[`transform schema: schemaIR 1`] = `
Object {
  "types": Object {
    "Boolean": Object {
      "kind": "scalar",
      "scalar": "Boolean",
    },
    "CustomScalar": Object {
      "kind": "scalar",
      "scalar": "CustomScalar",
    },
    "Float": Object {
      "kind": "scalar",
      "scalar": "Float",
    },
    "ID": Object {
      "kind": "scalar",
      "scalar": "ID",
    },
    "InputType": Object {
      "fields": Object {
        "list": Object {
          "kind": "list",
          "wrappedType": Object {
            "kind": "nonNull",
            "wrappedType": Object {
              "kind": "scalar",
              "scalar": "String",
            },
          },
        },
        "nested": Object {
          "kind": "namedType",
          "typename": "NestedInputType",
        },
        "recursive": Object {
          "kind": "namedType",
          "typename": "InputType",
        },
        "scalar": Object {
          "kind": "scalar",
          "scalar": "Boolean",
        },
      },
      "kind": "inputObject",
    },
    "Int": Object {
      "kind": "scalar",
      "scalar": "Int",
    },
    "Mutation": Object {
      "fields": Object {
        "listOfNestedObject": Object {
          "kind": "list",
          "wrappedType": Object {
            "kind": "namedType",
            "typename": "ObjectType",
          },
        },
        "method": Object {
          "kind": "scalar",
          "scalar": "CustomScalar",
        },
        "method2": Object {
          "kind": "list",
          "wrappedType": Object {
            "kind": "scalar",
            "scalar": "CustomScalar",
          },
        },
        "nestedObject": Object {
          "fields": Object {
            "list": Object {
              "kind": "list",
              "wrappedType": Object {
                "kind": "nonNull",
                "wrappedType": Object {
                  "kind": "scalar",
                  "scalar": "String",
                },
              },
            },
            "nested": Object {
              "fields": Object {
                "scalar": Object {
                  "kind": "scalar",
                  "scalar": "Int",
                },
              },
              "kind": "object",
            },
            "recursive": Object {
              "kind": "namedType",
              "typename": "ObjectType",
            },
            "scalar": Object {
              "kind": "scalar",
              "scalar": "Boolean",
            },
          },
          "kind": "object",
        },
        "nonNullableBoolean": Object {
          "kind": "nonNull",
          "wrappedType": Object {
            "kind": "scalar",
            "scalar": "Boolean",
          },
        },
        "nullableBoolean": Object {
          "kind": "scalar",
          "scalar": "Boolean",
        },
        "scalarBoolean": Object {
          "kind": "scalar",
          "scalar": "Boolean",
        },
        "scalarCustom": Object {
          "kind": "scalar",
          "scalar": "CustomScalar",
        },
        "scalarFloat": Object {
          "kind": "scalar",
          "scalar": "Float",
        },
        "scalarID": Object {
          "kind": "scalar",
          "scalar": "ID",
        },
        "scalarInt": Object {
          "kind": "scalar",
          "scalar": "Int",
        },
        "scalarString": Object {
          "kind": "scalar",
          "scalar": "String",
        },
      },
      "kind": "object",
    },
    "NestedInputType": Object {
      "fields": Object {
        "scalar": Object {
          "kind": "scalar",
          "scalar": "Int",
        },
      },
      "kind": "inputObject",
    },
    "NestedObjectType": Object {
      "fields": Object {
        "scalar": Object {
          "kind": "scalar",
          "scalar": "Int",
        },
      },
      "kind": "object",
    },
    "ObjectType": Object {
      "fields": Object {
        "list": Object {
          "kind": "list",
          "wrappedType": Object {
            "kind": "nonNull",
            "wrappedType": Object {
              "kind": "scalar",
              "scalar": "String",
            },
          },
        },
        "nested": Object {
          "fields": Object {
            "scalar": Object {
              "kind": "scalar",
              "scalar": "Int",
            },
          },
          "kind": "object",
        },
        "recursive": Object {
          "kind": "namedType",
          "typename": "ObjectType",
        },
        "scalar": Object {
          "kind": "scalar",
          "scalar": "Boolean",
        },
      },
      "kind": "object",
    },
    "Potato": Object {
      "fields": Object {
        "id": Object {
          "kind": "scalar",
          "scalar": "ID",
        },
        "origin": Object {
          "kind": "scalar",
          "scalar": "String",
        },
      },
      "kind": "object",
    },
    "Query": Object {
      "fields": Object {
        "listOfNestedObject": Object {
          "kind": "list",
          "wrappedType": Object {
            "kind": "namedType",
            "typename": "ObjectType",
          },
        },
        "method": Object {
          "kind": "scalar",
          "scalar": "CustomScalar",
        },
        "method2": Object {
          "kind": "list",
          "wrappedType": Object {
            "kind": "scalar",
            "scalar": "CustomScalar",
          },
        },
        "nestedObject": Object {
          "fields": Object {
            "list": Object {
              "kind": "list",
              "wrappedType": Object {
                "kind": "nonNull",
                "wrappedType": Object {
                  "kind": "scalar",
                  "scalar": "String",
                },
              },
            },
            "nested": Object {
              "fields": Object {
                "scalar": Object {
                  "kind": "scalar",
                  "scalar": "Int",
                },
              },
              "kind": "object",
            },
            "recursive": Object {
              "kind": "namedType",
              "typename": "ObjectType",
            },
            "scalar": Object {
              "kind": "scalar",
              "scalar": "Boolean",
            },
          },
          "kind": "object",
        },
        "nonNullableBoolean": Object {
          "kind": "nonNull",
          "wrappedType": Object {
            "kind": "scalar",
            "scalar": "Boolean",
          },
        },
        "nullableBoolean": Object {
          "kind": "scalar",
          "scalar": "Boolean",
        },
        "scalarBoolean": Object {
          "kind": "scalar",
          "scalar": "Boolean",
        },
        "scalarCustom": Object {
          "kind": "scalar",
          "scalar": "CustomScalar",
        },
        "scalarFloat": Object {
          "kind": "scalar",
          "scalar": "Float",
        },
        "scalarID": Object {
          "kind": "scalar",
          "scalar": "ID",
        },
        "scalarInt": Object {
          "kind": "scalar",
          "scalar": "Int",
        },
        "scalarString": Object {
          "kind": "scalar",
          "scalar": "String",
        },
        "union": Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "namedType",
              "typename": "Tomato",
            },
            Object {
              "kind": "namedType",
              "typename": "Potato",
            },
          ],
        },
      },
      "kind": "object",
    },
    "String": Object {
      "kind": "scalar",
      "scalar": "String",
    },
    "Tomato": Object {
      "fields": Object {
        "color": Object {
          "kind": "scalar",
          "scalar": "String",
        },
        "id": Object {
          "kind": "scalar",
          "scalar": "ID",
        },
      },
      "kind": "object",
    },
    "UnionType": Object {
      "kind": "union",
      "types": Array [
        Object {
          "kind": "namedType",
          "typename": "Tomato",
        },
        Object {
          "kind": "namedType",
          "typename": "Potato",
        },
      ],
    },
    "__Directive": undefined,
    "__DirectiveLocation": undefined,
    "__EnumValue": undefined,
    "__Field": undefined,
    "__InputValue": undefined,
    "__Schema": undefined,
    "__Type": undefined,
    "__TypeKind": undefined,
  },
}
`;

exports[`validate document: sourceCode 1`] = `
"query testScalars {
  scalarString
  scalarInt
  scalarFloat
  scalarBoolean
  scalarID
  scalarCustom

  renamedString: scalarString
}

query testNullability {
  nullableBoolean
  nonNullableBoolean
}

query testNesting {
  nestedObject {
    recursive {
      recursive {
        scalar
      }
    }
    nested {
      scalar
    }
    scalar
    list
  }
}

query testUnion {
  union {
    ... on Tomato {
      id
      color
    }
    ... on Potato {
      id
      origin
    }
  }
}

query testMethods(
  $reqParam: String!
  $optParam: Float!
  $input: InputType
  $list2: [CustomScalar!]!
) {
  method(requiredParam: $reqParam, optionalParam: $optParam, input: $input)
  renamedMethod: method2(list2: $list2)
}

mutation testScalarsMutation {
  scalarString
  scalarInt
  scalarFloat
  scalarBoolean
  scalarID
  scalarCustom

  renamedString: scalarString
}

mutation testNullabilityMutation {
  nullableBoolean
  nonNullableBoolean
}

mutation testNestingMutation {
  nestedObject {
    recursive {
      recursive {
        scalar
      }
    }
    nested {
      scalar
    }
    scalar
    list
  }
}

mutation testMethodsMutation(
  $reqParam: String!
  $optParam: Float!
  $input: InputType
  $list2: [CustomScalar!]!
) {
  method(requiredParam: $reqParam, optionalParam: $optParam, input: $input)
  renamedMethod: method2(list2: $list2)
}

# fragment ObjectTypeFields on ObjectType {
#   scalar
# }

# query testFragments {
#   nestedObject {
#     ...ObjectTypeFields
#   }
# }
"
`;
